# ceefax-weather

./: Cargo.toml  README.md  flake.nix
src/: app.rs  config.rs  main.rs  ui.rs  wttr.rs
templates/: berlin.toml  germany.toml  uk.toml
